== Released [attachment:wiki:SoftwareReleases:eLife-1.6b16.zip V1.6b16]   ==

''' M1 '''

Rolled in PIR changes.

''' Calendar '''

Fixed problem with ACTIVE="N" on repeating events. Solves ticket [ticket:575]

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b15.zip V1.6b15]   ==

''' CBUS '''

Ensure MMI helper does not get comms reference before comms is properly set up in master model.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b14.zip V1.6b14]   ==

''' CBUS '''

Ensure end of startup will be recognized even if CBUS is not echoing startup strings.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b13.zip V1.6b13]   ==

''' CBUS '''

Recognize CBUS startup even if MMI corrupts the startup string.
Correct CBUS startup handshaking to use correct protocol information.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b12.zip V1.6b12]   ==

''' CBUS '''

Moved MMI into its own object to simpliy Cbus debugging.
Resolved CBUS startup parameter issues.
Solved CBUS checksum issues.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b11.zip V1.6b11]   ==

''' CBUS '''

Fixed startup and performance issues


== Released [attachment:wiki:SoftwareReleases:eLife-1.6b10.zip V1.6b10]   ==

''' M1 '''

Fixed null pointers in M1 when events occur that a device has not configured.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b9.zip V1.6b9]   ==

''' Jetty '''

Fixed bug with https updating.

''' General '''

Improved concurrency handling in the servlet interface.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b8.zip V1.6b8]   ==

''' Jetty '''

Fixed bug with https updating.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b7.zip V1.6b7]   ==

''' Jetty '''

Updated sessions to be explicitly sent via GET or POST parameters, rather than relying on cookies. To support ticket [ticket:567]

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b6.zip V1.6b6]   ==

''' Script '''
