@@ -1,4 +1,4 @@
-#Sat Dec 23 00:24:30 EST 2006
+#Sat Dec 23 22:59:57 EST 2006
 major_version=1.6b
-minor_version=16
+minor_version=18
 app_name=eLife
